; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c__br_find_exe_for_symbol.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c__br_find_exe_for_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BR_INIT_ERROR_DISABLED = common dso_local global i32 0, align 4
@SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @_br_find_exe_for_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @_br_find_exe_for_symbol(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @BR_INIT_ERROR_DISABLED, align 4
  %9 = load i32*, i32** %4, align 8
  store i32 %8, i32* %9, align 4
  br label %10

10:                                               ; preds = %7, %2
  ret i8* null
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
